# carmonitor

./: .env  Cargo.toml
migrations/20191027/: up.sql
src/: config.rs  errors.rs  main.rs
src/models/: login.rs  mod.rs  user.rs  vue_resp.rs
src/repositories/: database.rs  mod.rs  user.rs
src/users/: login.rs  me.rs  mod.rs
src/utils/: auth.rs  db.rs  idgen.rs  jwt.rs  mod.rs  pagination.rs
