[package]
name = "carmonitor"
version = "0.1.0"
authors = ["lwp001 <javashujuku@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
lto = false

[dependencies]
actix-web = "1.0.8"
actix-files = "0.1.6"
actix-cors = "^0.1"
actix-service = "0.4.1"
futures = "0.1.29"
serde = {version = "1.0.101",features = ["derive"]}
serde_json = "1.0.40"
failure = "0.1.6"
diesel = { version = "1.4.3", features = ["r2d2", "postgres","chrono","uuidv07"] }

env_logger = "0.7.1"
jsonwebtoken = "6.0.1"
log = "0.4.8"
num_cpus = "1.10.1"
r2d2 = "0.8.6"
serde_cbor = "0.10.2"
time = "0.2.0"
url = "2.1.0"
uuid = { version = "0.8.1", features = ["serde","v4"] }
chrono = {version = "0.4.9",features = ["serde"]}

dotenv = "0.14.1"
bcrypt = "0.6.1"
reqwest = "0.10.0-alpha.1"
validator = "0.10.0"
validator_derive = "0.10.0"
strum = "0.16.0"
strum_macros = "0.16.0"
envconfig = "0.5.1"
envconfig_derive = "0.5.1"
derive-new = "0.5.8"

#diesel = {version = "1.4.3",features = ["postgres","uuidv07","chrono","serde_json"]}
#diesel_migrations = "1.4.0"
